Added html written by other guys

--- a/phase2/activity-list.html
+++ b/phase2/activity-list.html
@@ -19,7 +19,7 @@
     <h2>This phase</h2>
     <ol>
 			<li><a href="./activity-design-brainstorming.html">Activity Design Brainstorming</a></li>
-			<li><a href="./activity-list.html">Activity List</a></li>
+			<li>Activity List</li>
 			<li><a href="./activity-scenarios.html">Activity Scenarios</a></li>
 			<li><a href="./activity-claims.html">Activity Claims</a></li>
 			<li><a href="./info-design-brainstorming.html">Information Design Brainstorming</a></li>
