--- a/phase2/activity-scenarios.html
+++ b/phase2/activity-scenarios.html
@@ -20,7 +20,7 @@
     <ol>
 			<li><a href="./activity-design-brainstorming.html">Activity Design Brainstorming</a></li>
 			<li><a href="./activity-list.html">Activity List</a></li>
-			<li><a href="./activity-scenarios.html">Activity Scenarios</a></li>
+			<li>Activity Scenarios</li>
 			<li><a href="./activity-claims.html">Activity Claims</a></li>
 			<li><a href="./info-design-brainstorming.html">Information Design Brainstorming</a></li>
 			<li><a href="./info-design-scenarios.html">Information Design Scenarios</a></li>
