--- a/phase2/info-design-scenarios.html
+++ b/phase2/info-design-scenarios.html
@@ -23,7 +23,7 @@
 			<li><a href="./activity-scenarios.html">Activity Scenarios</a></li>
 			<li><a href="./activity-claims.html">Activity Claims</a></li>
 			<li><a href="./info-design-brainstorming.html">Information Design Brainstorming</a></li>
-			<li><a href="./info-design-scenarios.html">Information Design Scenarios</a></li>
+			<li>Information Design Scenarios</li>
 			<li><a href="./info-design-claims.html">Information Design Claims</a></li>
 			<li><a href="./representations.html">Representations</a></li>
 		</ol>
