Now mostly finished

--- a/phase2/activity-claims.html
+++ b/phase2/activity-claims.html
@@ -1,75 +1,32 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>HCI Project | Phase 2</title>
-		<link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="utf-8" />
-		<style>
-			td,th {
-				border-bottom: 1px solid black;
-				padding: 5px;
-			}
-			td { padding: 20 10px; }
-			.label { width: 140px; padding-left: 10px;}
-			th {
-				border: 1px solid black;
-				font-size: 16px;
-				background: #ccc;
-			}
-		</style>
-	</head>
-	<body> 
-		<div id="content">
-			<h1>Phase 2: Activity Claims</h1>
-			<hr />
-			<h2>Site navigation</h2> 
-			<p>
-				<a href="../index.html">Home</a> |
-				<a href="../phase1/index.html">Phase 1</a> |
-				Phase 2 |
-				<a href="../phase3/index.html">Phase 3</a> |
-				<a href="../phase4/index.html">Phase 4</a> |
-				<a href="../phase5/index.html">Phase 5</a>
-			</p>
-			<h2>This phase</h2>
-			<ol>
-				<li><a href="activity-design-brainstorming.html">Activity Design Brainstorming</a></li>
-				<li><a href="activity-list.html">Activity List</a></li>
-				<li><a href="activity-scenarios.html">Activity Scenarios</a></li>
-				<li>Activity Claims</li>
-				<li><a href="info-design-brainstorming.html">Information Design Brainstorming</a></li>
-				<li><a href="info-design-scenarios.html">Information Design Scenarios</a></li>
-				<li><a href="info-design-claims.html">Information Design Claims</a></li>
-				<li><a href="representations.html">Representations</a></li>
-			</ol>
-			<hr />
-			<table cellspacing=0><tr><th colspan=2>User Perspective</th></tr>
-				<tr><td class="label">Reading Text Linearly</td><td>Users may wish to read through the text linearly, page by page as in a normal book, rather than skipping around to small, specific sections.</td></tr>
-				<tr><td class="label">Searching for a Topic</td><td>Users will want to be able to search the text for specific words and phrases quickly and easily.</td></tr>
-				<tr><td class="label">Looking up Definitions</td><td>Users may want to look up words they don&#39;t know in some form of built in dictionary.</td></tr>
-				<tr><td class="label">Locating Prerequisite Concepts</td><td>Users will want the ability to quickly look up any prerequisite concepts needed to understand the current concepts.</td></tr>
-				<tr><td class="label">Watching Videos</td><td>Users and content creaters may want the ability to watch/link to/embed videos related to the current concept.</td></tr>
-				<tr><td class="label">Listening to Audio</td><td>Users and content creaters may want the ability to listen to or link to audio files related to the current concept.</td></tr>
-				<tr><td class="label">Following Hyperlinks</td><td>Users will want the ability to follow links to related concepts and media, without the links becoming intrusive and distracting them from reading.</td></tr>
-				<tr><td class="label">Highlighting Content</td><td>Users will want the ability to &#39;highlight&#39; sections of text to draw their attention to particularly interesting pieces of information on further reading.</td></tr>
-				<tr><td class="label">Annotating Content</td><td>Users will want the ability to write notes relating to the current concept in-app and store these annotation in the concept page.</td></tr>
-				<tr><td class="label">Creating and Sharing Links</td><td>Users will want the ability to create and share links to concepts/websites/video/audio related to the current concept.</td></tr>
-				<tr><td class="label"> ? View the Concept Map Itself</td><td>Users may want the ability to view the underlying concept map directly.</td></tr>
-				<tr><td class="label">Flipping Between Sets of Pages</td><td>Users may want to rapidly switch back-and-forth between two or more pages.</td></tr>
-				<tr><td class="label">Browsing Contents, Skimming Multiple Pages</td><td>Users may want to quickly skim the contents of multiple pages simultaneously.</td></tr>
-				<tr><td class="label">Backup Annotations to External Source</td><td> Users will want the ability to backup their notes, custom links, and highlights to an external source so that they are not lost when the book is deleted from the drive.</td></tr>
-			</table>
-
-			<table cellspacing=0><tr><th colspan=2>Content Designer Perspective</th></tr>
-				<tr><td class="label">Convert Traditional Book to Digital Form</td><td>Content designers will want an easy way to convert existing paper textbooks to the E-Book format.</td></tr>
-				<tr><td class="label">Mark Up Text/Content as a Concept Map</td><td>Content designers will want an easy method to create concepts maps for their content.</td></tr>
-				<tr><td class="label">Map Learning Path</td><td>Content designers will want the ability to insert default &#39;Learning Paths&#39; for a reader to go through the textbook for linear reading.</td></tr>
-				<tr><td class="label">Add External Resources</td><td>Content designers will want the ability to link to external resources such as other textbooks, websites, video, and audio.</td></tr>
-			</table>
-
-			<table cellspacing=0><tr><th colspan=2>System Perspective</th></tr>
-				<tr><td class="label">Build Larger Web of Concept Maps</td><td>The system should be able to build a larger web of concept maps using the external links added by users.</td></tr>
-			</table>
-		</div>
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-AU">
+<head>
+  <title>HCI Project | Phase 2</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+  <link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="utf-8" />
+</head>
+<body>
+  <div id="content">
+    <h1>Phase 2</h1>
+    <hr />
+    <h2>Site navigation</h2>
+    <a href="../index.html">Home</a> |
+    <a href="../phase1/index.html">Phase 1</a> |
+    Phase 2 |
+    <a href="../phase3/index.html">Phase 3</a> |
+    <a href="../phase4/index.html">Phase 4</a> |
+    <a href="../phase5/index.html">Phase 5</a>
+    <h2>This phase</h2>
+    <ol>
+			<li><a href="./activity-design-brainstorming.html">Activity Design Brainstorming</a></li>
+			<li><a href="./activity-list.html">Activity List</a></li>
+			<li><a href="./activity-scenarios.html">Activity Scenarios</a></li>
+			<li>Activity Claims</li>
+			<li><a href="./info-design-brainstorming.html">Information Design Brainstorming</a></li>
+			<li><a href="./info-design-scenarios.html">Information Design Scenarios</a></li>
+			<li><a href="./info-design-claims.html">Information Design Claims</a></li>
+			<li><a href="./representations.html">Representations</a></li>
+		</ol>
+  </div>
+</body>
 </html>
