--- a/phase2/activity-design-brainstorming.html
+++ b/phase2/activity-design-brainstorming.html
@@ -93,6 +93,13 @@
 				
 				</td></tr>
 			</table>
+			
+			<h2>Discussion with client about activity design</h2>
+      <p>Initially, the group and the client had differing points of view when it came the purpose of a digital textbook application. The group, having been given the broad task of designing a digital textbook, approached the task from the point of view of improving on existing eBook technologies. However, the client introduced the idea of concept mapping as a way to relate concepts, and showed an example concept map implemented using hypertext in a web browser. The group decided to combine both points of view to design a textbook platform for iPad with the dual focuses of providing better usability than currently available eBook readers, and also using concept mapping techniques to enhance the learning experience for users.</p>
+
+      <p>From this discussion and the idea of links to related concepts at the paragraph, section and chapter levels, the client suggested that if a user is completely lost regarding a given textbook, they can follow the concept map up the hierarchy until they reach a foundational concept that they are familiar with. From that point, they can read the chain of related concepts, building their knowledge until they understand the text they were originally reading.</p>
+
+      <p>This functionality is currently in our list of activities, but will be added at a later date. (This is due to the group not meeting with the client until towards the end of phase 2, as suggested in the phase description.)</p>
 		</div>
 	</body>
 </html>
