--- a/phase2/info-design-claims.html
+++ b/phase2/info-design-claims.html
@@ -30,12 +30,12 @@
 			</ol>
 			<hr />
 			<h2>Claims for information scenarios</h2>
-			<p><b>A drop-down menu will be used to display much of what the user can accomplish. (<a href="info-design-scenarios.html#scenario_1">Info Scenario 1</a>)<br/></b>
+			<p id="claim1"><b>A drop-down menu will be used to display much of what the user can accomplish. (<a href="info-design-scenarios.html#scenario_1">Info Scenario 1</a>)<br/></b>
 			+ Will reduce clutter on the page.<br/>
 			- Might be hit accidentally by the user.
 			</p>
 			 
-			<p><b>Links to useful concepts will be displayed on the right side of the page. (<a href="info-design-scenarios.html#scenario_1">Info Scenario 1</a>)<br/></b>
+			<p id="claim2"><b>Links to useful concepts will be displayed on the right side of the page. (<a href="info-design-scenarios.html#scenario_1">Info Scenario 1</a>)<br/></b>
 			+ The links will be easily accessible at all times.<br/>
 			- Some users might not like staring at hyperlinks at all times.<br/>
 			- Could crowd the page a bit.
