Only representations + info brainstorm to complete

--- a/phase2/activity-claims.html
+++ b/phase2/activity-claims.html
@@ -27,6 +27,35 @@
 			<li><a href="./info-design-claims.html">Information Design Claims</a></li>
 			<li><a href="./representations.html">Representations</a></li>
 		</ol>
+		<hr />
+		<h2>Claims for activity scenarios</h2>
+		<p>
+		<a id="claim_1"></a>
+		<b>Textbooks must be downloaded in order to view them (<a href="./activity-scenarios.html#scenario_1">Scenario 1</a>)</b><br/>
+		+ After downloading, navigation will be fast.<br/>
+		- Downloading in the first place could take a while.<br/>
+		- Limited hard drive space could pose an issue.
+		</p><p>
+		<a id="claim_2"></a>
+		<b>Can search through a textbook with built in keyword search (<a href="./activity-scenarios.html#scenario_1">Scenario 1</a>)</b><br/>
+		+ Users comfortable with searching can locate things faster than with an index<br/>
+		- Search may not be as fast or intuitive as flipping through pages
+		</p><p>
+		<a id="claim_3"></a>
+		<b>Textbooks can be purchased directly within the app (<a href="./activity-scenarios.html#scenario_2">Scenario 2</a>)</b><br/>
+		+ No need to go to a physical store<br/>
+		- Can't necessarily read a sample of the book before buying
+		</p><p>
+		<a id="claim_4"></a>
+		<b>Will be available on a mobile reading device (<a href="./activity-scenarios.html#scenario_2">Scenario 2</a>)</b><br/>
+		+ Portable<br/>
+		- but could limit design features due to lack of processing power.
+		</p><p>
+		<a id="claim_5"></a>
+		<b>Will include the ability to annotate the textbook (<a href="./activity-scenarios.html#scenario_2">Scenario 2</a>)</b><br/>
+		+ Allows the user to take his or her own notes.<br/>
+		- but could be difficult to integrate with the concept map.
+		</p>
   </div>
 </body>
 </html>
