--- a/phase2/info-design-claims.html
+++ b/phase2/info-design-claims.html
@@ -41,18 +41,18 @@
 			- Could crowd the page a bit.
 			</p>
 			
-			<p><b>The application will have an imbedded browser. (<a href="info-design-scenarios.html#scenario_1">Info Scenario 1</a>)<br/></b>
+			<p id="claim3"><b>The application will have an embedded browser. (<a href="info-design-scenarios.html#scenario_1">Info Scenario 1</a>)<br/></b>
 			+ The user will not have to close the application to access a browser.<br/>
 			- Could take a while to load within the application.
 			</p>
 			
-			<p><b>The application will allow the user to take notes of unlimited length. (<a href="info-design-scenarios.html#scenario_2">Info Scenario 2</a>)<br/></b>
+			<p id="claim4"><b>The application will allow the user to take notes of unlimited length. (<a href="info-design-scenarios.html#scenario_2">Info Scenario 2</a>)<br/></b>
 			+ Users who take lots of notes will love this feature.<br/>
 			- But due to the fact we will not limit the length, memory for notes could fill quickly.
 			</p>
 			
-			<p><b>The application will support imbedded videos. (<a href="info-design-scenarios.html#scenario_2">Info Scenario 2</a>)<br/></b>
-			+ User’s will be able to learn not just by reading, but by listening and watching as well.<br/>
+			<p id="claim5"><b>The application will support embedded videos. (<a href="info-design-scenarios.html#scenario_2">Info Scenario 2</a>)<br/></b>
+			+ Users will be able to learn not just by reading, but by listening and watching as well.<br/>
 			- Pages and videos could take a while to load within the application.
 			</p>
 		</div>
