Added representations page

--- a/phase2/activity-design-brainstorming.html
+++ b/phase2/activity-design-brainstorming.html
@@ -4,14 +4,20 @@
 		<title>HCI Project | Phase 2</title>
 		<link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="utf-8" />
 		<style>
-			th {
-				border-bottom: 1px solid black;
+			table,th,td {
+				border: 1px solid #666;
+				font-size: inherit;
 			}
-			.label { width: 200px; padding-left: 10px;}
+			th,td {
+				width: 266px;
+			}
+			.label { width: 200px; padding-left: 10px; vertical-align: top;}
 			.header {
 				border: 1px solid black;
-				font-size: 14px;
 				background: #ccc;
+			}
+			.subpoint {
+				padding: 3px 5px 7px;
 			}
 		</style>
 	</head>
