--- a/phase2/info-design-brainstorming.html
+++ b/phase2/info-design-brainstorming.html
@@ -4,6 +4,23 @@
   <title>HCI Project | Phase 2</title>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
   <link rel="stylesheet" href="../style.css" type="text/css" media="screen" charset="utf-8" />
+  <style>
+		table,th,td {
+			border: 1px solid #666;
+			font-size: inherit;
+		}
+		th,td {
+			width: 266px;
+		}
+		.label { width: 200px; padding-left: 10px; vertical-align: top;}
+		.header {
+			border: 1px solid black;
+			background: #ccc;
+		}
+		.subpoint {
+			padding: 3px 5px 7px;
+		}
+	</style>
 </head>
 <body>
   <div id="content">
@@ -28,44 +45,40 @@
 			<li><a href="representations.html">Representations</a></li>
 		</ol>
     <hr />
-
-<h2>Information, metaphors, technologies and implications</h2>
-<ol>
-<li><p><strong>Information:</strong> links to related concepts</p>
-
-<p><strong>Metaphor:</strong> an annotated bibliography or reference list, search engine results</p>
-
-<p><strong>Implication:</strong> the idea is to move away from the obvious visual representation of a concept map and toward a more palatable form. Provide an easy to digest list of curated sources, which will be presented in a way similar to search engine results but much more useful and reliable.</p></li>
-<li><p><strong>Information:</strong> user annotations to text</p>
-
-<p><strong>Metaphor:</strong> margin notes</p>
-
-<p><strong>Implication:</strong> display an icon or shading in the margin that indicates where a note has been written. Given this metaphor there is no real affordance that notes can be written in the margins: could provide a &#8220;mode of sorts&#8221; where you could tap on the text you wish to annotate and you are automatically shifted into the margin or pop-up to write the note.</p></li>
-<li><p><strong>Information:</strong> highlighted text</p>
-
-<p><strong>Metaphor:</strong> highlighting a real book</p>
-
-<p><strong>Implication:</strong> user can use their finger as if it were a highlighted and emphasize text that is important. Highlighted text is represented just as if it were a real textbook.</p></li>
-<li><p><strong>Information:</strong> indicating to a user that they can link to content they found useful</p>
-
-<p><strong>Metaphor:</strong> verbal/other sharing of things students have found helpful, whether a web page or textbook chapter or something else</p>
-
-<p><strong>Implication:</strong> in the context of viewing related/supporting texts (from the concept map), indicate to the user that they can &#8220;Add a link to a resource you [they] found helpful&#8230;&#8221;. Provides a native (i.e. in-app) way for users to share content they&#8217;ve found helpful.</p></li>
-<li><p><strong>Information:</strong> textbook content</p>
-
-<p><strong>Metaphor:</strong> real-world textbook</p>
-
-<p><strong>Implication:</strong> people are comfortable with idea of textbooks and the way they work. In replicating textbook in digital format, it would be beneficial to the user to avoid giving them a completely unfamiliar and un-textbook-like experience. Use pagination instead of scrolling. Use a page-turn animation to explicitly show the user they are moving to the next page. A digital model of a real-world page gives the affordance that it can be interacted with in the same way as a real-world page.</p></li>
-<li><p><strong>Information:</strong> amount still to read / position in book</p>
-
-<p><strong>Metaphor:</strong> thickness of book</p>
-
-<p><strong>Implication:</strong> can&#8217;t really be replicated adequately with a divide like the iPad, which has constant thickness. The thickness of the book could be represented visually, but this would be a too-indirect means of communicating the amount left to read.</p>
-
-<p><strong>Metaphor:</strong> number of pages left</p>
-
-<p><strong>Implication:</strong> indicate to the user the total number of pages and how many there are left to read. Show progress as a kind of timeline/continuum, i.e., a one-dimensional representation of the page you&#8217;re on compared to the total number of pages.</p></li>
-</ol>
+		<table cellspacing=0>
+			<tr><th class="header" colspan=3>Metaphors</th></tr>
+			<tr><th>Information</th><th class="metaphor">Metaphor</th><th>Implications</th></tr>
+		<tr><th>Links to related concepts</th>
+		<td class="subpoint">An annotated bibliography or reference list, search engine results</td>
+		<td class="subpoint">The idea is to move away from the obvious visual representation of a concept map and toward a more palatable form. Provide an easy to digest list of curated sources, which will be presented in a way similar to search engine results but much more useful and reliable.</td></tr>
+		<tr><th>User annotations to text</th>
+		<td class="subpoint">Margin notes</td>
+		<td class="subpoint">Display an icon or shading in the margin that indicates where a note has been written. Given this metaphor there is no real affordance that notes can be written in the margins: could provide a "mode of sorts" where you could tap on the text you wish to annotate and you are automatically shifted into the margin or pop-up to write the note.</td></tr>
+		<tr><th>Highlighted text</th>
+		<td class="subpoint">Highlighting a real book</td>
+		<td class="subpoint">User can use their finger as if it were a highlighted and emphasize text that is important. Highlighted text is represented just as if it were a real textbook.</td></tr>
+		<tr><th>Indicating to a user that they can link to content they found useful</th>
+		<td class="subpoint">Verbal/other sharing of things students have found helpful, whether a web page or textbook chapter or something else</td>
+		<td class="subpoint">In the context of viewing related/supporting texts (from the concept map), indicate to the user that they can "Add a link to a resource you [they] found helpful...." Provides a native (i.e. in-app) way for users to share content they've found helpful.</td></tr>
+		<tr><th>Textbook content</th>
+		<td class="subpoint">Real-world textbook</td>
+		<td class="subpoint">People are comfortable with idea of textbooks and the way they work. In replicating textbook in digital format, it would be beneficial to the user to avoid giving them a completely unfamiliar and un-textbook-like experience. Use pagination instead of scrolling. Use a page-turn animation to explicitly show the user they are moving to the next page. A digital model of a real-world page gives the affordance that it can be interacted with in the same way as a real-world page.</td></tr>
+		<tr><th rowspan=2>Amount still to read / position in book</th>
+		<td class="subpoint">Thickness of book</td>
+		<td class="subpoint">Can't really be replicated adequately with a divide like the iPad, which has constant thickness. The thickness of the book could be represented visually, but this would be a too-indirect means of communicating the amount left to read.</td>
+		</tr><tr>
+		<td class="subpoint">Number of pages left</td>
+		<td class="subpoint">Indicate to the user the total number of pages and how many there are left to read. Show progress as a kind of timeline/continuum, i.e., a one-dimensional representation of the page you're on compared to the total number of pages.</td></tr>
+		</table>
+		<table cellspacing=0>
+			<tr><th class="header" colspan=3>Technology</th></tr>
+			<tr><th>Information</th><th>Technology</th><th>Implications</th></tr>
+			<tr><th>A page looks like a...</th><td class="subpoint">PDF</td><td class="subpoint">The book is separated into indiviual pages</td></tr>
+			<tr><th>An embedded video is like a...</th><td class="subpoint">DVD player</td><td class="subpoint">The book can play embedded videos</td></tr>
+			<tr><th>An annotation is like a...</th><td class="subpoint">Tomboy note</td><td class="subpoint">The book allows the user to create notes about the text.</td></tr>
+			<tr><th>Highlighting is like...</th><td class="subpoint">Highlighter</td><td class="subpoint">The book allows the user to highlight text.</td></tr>
+			<tr><th>An embedded browser is like...</th><td class="subpoint">An IOS app</td><td class="subpoint">The book uses a pop-up browser to access the internet.</td></tr>
+		</table>
 
 
   </div>
