--- a/phase2/info-design-brainstorming.html
+++ b/phase2/info-design-brainstorming.html
@@ -79,7 +79,11 @@
 			<tr><th>Highlighting is like...</th><td class="subpoint">Highlighter</td><td class="subpoint">The book allows the user to highlight text.</td></tr>
 			<tr><th>An embedded browser is like...</th><td class="subpoint">An IOS app</td><td class="subpoint">The book uses a pop-up browser to access the internet.</td></tr>
 		</table>
+    
+    <h2>Discussion with client for information design</h2>
+    <p>The activity of traversing the concept map from subjects that are not understood to find a concept that is understood came from the latest meeting with our client. The user should be able to go from a concept they don&#8217;t understand, and follow &#8220;prerequisite concept&#8221; links until they find a concept they understand.</p>
 
+    <p>This will be represented to the user through different types of links. Elaboration links, links on the same level of the hierarchy, will be like asides that cover examples or related concepts in the text. Prerequisite links will be to concepts that are foundational to the current one. The user will be able to differentiate between these, possibly with a colour-coding scheme or some other delineation. As the user follows successive prerequisite links, they will be able to use the standard iOS breadcrumb trail style back buttons to return to their initial position. See the representations page for a visual diagram of this.</p>
 
   </div>
 </body>
