Added prototype page w/ scope, fidelity

--- a/phase3/index.html
+++ b/phase3/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="content">
     <h1>Phase 3</h1>
+    <hr />
     <h2>Site navigation</h2>
     <a href="../index.html">Home</a> |
     <a href="../phase1/index.html">Phase 1</a> |
@@ -15,6 +16,11 @@
     Phase 3 |
     <a href="../phase4/index.html">Phase 4</a> |
     <a href="../phase5/index.html">Phase 5</a>
+    <h2>This phase</h2>
+    <ol>
+    	<li><a href="./interaction-design-brainstorming.html" title="Interaction Design Brainstorming">Interaction design brainstorming</a></li>
+    	<li><a href="./prototype.html" title="Interaction Design Interactive Prototype">Prototype</a></li>
+    </ol>
   </div>
 </body>
 </html>
