Minor updates to prototype.html

--- a/phase3/prototype.html
+++ b/phase3/prototype.html
@@ -23,7 +23,7 @@
     </ol>
     <hr />
 
-<h2>Scope of prototype</h2>
+<h2>Prototype scope</h2>
 
 <p>The approach taken in developing this prototype was to demonstrate the core functionality of the Digital Textbook App. The features that the prototype demonstrates are those which were intended to solve a particular pre-existent usability issue.</p>
 
@@ -31,13 +31,12 @@
 
 <h2>Prototype fidelity</h2>
 
-<p>The chosen prototyping tool is Keynote. The screens were constructed with a combination of the following elements:</p>
-
+<p>The chosen prototyping tool is Keynote. The screens were constructed with a combination of the following elements:
 <ul>
 <li>Screenshots of iBooks</li>
 <li>UI elements from a Keynote-based iPad prototyping kit</li>
 <li>Object animations and slide transitions</li>
-</ul>
+</ul></p>
 
 <p>This approach has made reasonably high-fidelity graphics and animations possible without writing a single line of code. Interactivity is simulated with hyperlinks. The prototype is also easily extensible by adding new slides, hyperlinks, animations and stock UI elements.</p>
 
