Finished prototype page

--- a/hamltest/hciprojtest/site/index.html
+++ b/hamltest/hciprojtest/site/index.html
@@ -17,5 +17,8 @@
       <li>Object animations and slide transitions</li>
     </ul>
     <p>This approach has made reasonably high-fidelity graphics and animations possible without writing a single line of code. Interactivity is simulated with hyperlinks. The prototype is also easily extensible by adding new slides, hyperlinks, animations and stock UI elements.</p>
+    <div class='class' id='id'>
+      <p>blah</p>
+    </div>
   </body>
 </html>
