--- a/phase3/prototype.html
+++ b/phase3/prototype.html
@@ -18,7 +18,9 @@
     <a href="../phase5/index.html">Phase 5</a>
     <h2>This phase</h2>
     <ol>
-    	<li><a href="./interaction-design-brainstorming.html" title="Interaction Design Brainstorming">Interaction design brainstorming</a></li>
+    	<li><a href="./interaction-design-brainstorming.html">Interaction Design Brainstorming</a></li>
+		<li><a href="./interaction-design-scenarios.html">Interaction Design Scenarios</a></li>
+		<li><a href="./interaction-design-claims.html">Interaction Design Claims</a></li>
     	<li>Prototype</li>
     </ol>
     <hr />
