Created a build of the site for live preview

--- a/hciproj/site/phase1/index.html
+++ b/hciproj/site/phase1/index.html
@@ -24,19 +24,19 @@
       <h2>This phase</h2>
       <ol>
         <li>
-          <a href="./root-concept.html">Root concept</a>
+          <a href="./root_concept.html" title="Root concept">Root concept</a>
         </li>
         <li>
-          <a href="./field-studies.html">Field studies</a>
+          <a href="./field_studies.html" title="Field studies">Field studies</a>
         </li>
         <li>
-          <a href="../summaries.html">Summaries</a>
+          <a href="./summaries.html" title="Summaries">Summaries</a>
         </li>
         <li>
-          <a href="../problem-scenarios.html">Problem scenarios</a>
+          <a href="./problem_scenarios.html" title="Problem scenarios">Problem scenarios</a>
         </li>
         <li>
-          <a href="../claims.html">Claims</a>
+          <a href="./claims.html" title="Claims">Claims</a>
         </li>
       </ol>
     </div>
