--- a/hciproj/site/phase2/information_design_claims.html
+++ b/hciproj/site/phase2/information_design_claims.html
@@ -15,15 +15,13 @@
         <ul>
           <li class="not-last"><a href="/index.html">Home</a></li>
           <li class="not-last"><a href="/phase1/index.html">Phase 1</a></li>
-          <li class="active not-last">Phase 2</li>
+          <li class="not-last"><a href="/phase2/index.html">Phase 2</a></li>
           <li class="not-last"><a href="/phase3/index.html">Phase 3</a></li>
           <li class="not-last"><a href="/phase4/index.html">Phase 4</a></li>
           <li><a href="/phase5/index.html">Phase 5</a></li>
         </ul>
       </div>
-      <h2>
-        This phase
-      </h2>
+      <h2>This phase</h2>
       <ol>
         <li>
           <a href="./activity_design_brainstorming.html" title="Activity Design Brainstorming">Activity Design Brainstorming</a>
@@ -43,13 +41,30 @@
         <li>
           <a href="./information_design_scenarios.html" title="Information Design Scenarios">Information Design Scenarios</a>
         </li>
-        <li>
-          <a href="./information_design_claims.html" title="Information Design Claims">Information Design Claims</a>
-        </li>
+        <li>Information Design Claims</li>
         <li>
           <a href="./representations.html" title="Representations">Representations</a>
         </li>
       </ol>
+      <hr />
+      <h2 id='claims_for_information_scenarios'>Claims for information scenarios</h2>
+      <p id='claim1'><b>A drop-down menu will be used to display much of what the user can accomplish. (<a href='information_design_scenarios.html#scenario_1'>Info Scenario 1</a>)<br /></b>
+      + Will reduce clutter on the page.<br />
+      - Might be hit accidentally by the user.
+      </p><p id='claim2'><b>Links to useful concepts will be displayed on the right side of the page. (<a href='information_design_scenarios.html#scenario_1'>Info Scenario 1</a>)<br /></b>
+      + The links will be easily accessible at all times.<br />
+      - Some users might not like staring at hyperlinks at all times.<br />
+      - Could crowd the page a bit.
+      </p><p id='claim3'><b>The application will have an embedded browser. (<a href='information_design_scenarios.html#scenario_1'>Info Scenario 1</a>)<br /></b>
+      + The user will not have to close the application to access a browser.<br />
+      - Could take a while to load within the application.
+      </p><p id='claim4'><b>The application will allow the user to take notes of unlimited length. (<a href='information_design_scenarios.html#scenario_2'>Info Scenario 2</a>)<br /></b>
+      + Users who take lots of notes will love this feature.<br />
+      - But due to the fact we will not limit the length, memory for notes could fill quickly.
+      </p><p id='claim5'><b>The application will support embedded videos. (<a href='information_design_scenarios.html#scenario_2'>Info Scenario 2</a>)<br /></b>
+      + Users will be able to learn not just by reading, but by listening and watching as well.<br />
+      - Pages and videos could take a while to load within the application.
+      </p>
     </div>
   </body>
 </html>
