--- a/hciproj/site/phase3/index.html
+++ b/hciproj/site/phase3/index.html
@@ -21,29 +21,19 @@
           <li><a href="/phase5/index.html">Phase 5</a></li>
         </ul>
       </div>
-      <h2>
-        This phase
-      </h2>
+      <h2>This phase</h2>
       <ol>
         <li>
-          <a href='./interaction-design-brainstorming.html'>
-            Interaction Design Brainstorming
-          </a>
+          <a href="./interaction_design_brainstorming.html" title="Interaction Design Brainstorming">Interaction Design Brainstorming</a>
         </li>
         <li>
-          <a href='./interaction-design-scenarios.html'>
-            Interaction Design Scenarios
-          </a>
+          <a href="./interaction_design_scenarios.html" title="Interaction Design Scenarios">Interaction Design Scenarios</a>
         </li>
         <li>
-          <a href='./interaction-design-claims.html'>
-            Interaction Design Claims
-          </a>
+          <a href="./interaction_design_claims.html" title="Interaction Design Claims">Interaction Design Claims</a>
         </li>
         <li>
-          <a href='./prototype.html'>
-            Prototype
-          </a>
+          <a href="./prototype.html" title="Prototype">Prototype</a>
         </li>
       </ol>
     </div>
