--- a/hciproj/site/phase2/activity_claims.html
+++ b/hciproj/site/phase2/activity_claims.html
@@ -15,15 +15,13 @@
         <ul>
           <li class="not-last"><a href="/index.html">Home</a></li>
           <li class="not-last"><a href="/phase1/index.html">Phase 1</a></li>
-          <li class="active not-last">Phase 2</li>
+          <li class="not-last"><a href="/phase2/index.html">Phase 2</a></li>
           <li class="not-last"><a href="/phase3/index.html">Phase 3</a></li>
           <li class="not-last"><a href="/phase4/index.html">Phase 4</a></li>
           <li><a href="/phase5/index.html">Phase 5</a></li>
         </ul>
       </div>
-      <h2>
-        This phase
-      </h2>
+      <h2>This phase</h2>
       <ol>
         <li>
           <a href="./activity_design_brainstorming.html" title="Activity Design Brainstorming">Activity Design Brainstorming</a>
@@ -34,9 +32,7 @@
         <li>
           <a href="./activity_scenarios.html" title="Activity Scenarios">Activity Scenarios</a>
         </li>
-        <li>
-          <a href="./activity_claims.html" title="Activity Claims">Activity Claims</a>
-        </li>
+        <li>Activity Claims</li>
         <li>
           <a href="./information_design_brainstorming.html" title="Information Design Brainstorming">Information Design Brainstorming</a>
         </li>
@@ -50,6 +46,26 @@
           <a href="./representations.html" title="Representations">Representations</a>
         </li>
       </ol>
+      <hr />
+      <h2 id='claims_for_activity_scenarios'>Claims for activity scenarios</h2>
+      <p id='claim_1'>
+      <strong>Textbooks must be downloaded in order to view them (<a href='./activity-scenarios.html#scenario_1'>Scenario 1</a>)</strong><br />
+      + After downloading, navigation will be fast.<br />
+      - Downloading in the first place could take a while.<br />
+      - Limited hard drive space could pose an issue.
+      </p><p id='claim_2'><strong>Can search through a textbook with built in keyword search (<a href='./activity-scenarios.html#scenario_1'>Scenario 1</a>)</strong><br />
+      + Users comfortable with searching can locate things faster than with an index<br />
+      - Search may not be as fast or intuitive as flipping through pages
+      </p><p id='claim_3'><strong>Textbooks can be purchased directly within the app (<a href='./activity-scenarios.html#scenario_2'>Scenario 2</a>)</strong><br />
+      + No need to go to a physical store<br />
+      - Can't necessarily read a sample of the book before buying
+      </p><p id='claim_4'><strong>Will be available on a mobile reading device (<a href='./activity-scenarios.html#scenario_2'>Scenario 2</a>)</strong><br />
+      + Portable<br />
+      - but could limit design features due to lack of processing power.
+      </p><p id='claim_5'><strong>Will include the ability to annotate the textbook (<a href='./activity-scenarios.html#scenario_2'>Scenario 2</a>)</strong><br />
+      + Allows the user to take his or her own notes.<br />
+      - but could be difficult to integrate with the concept map.
+      </p>
     </div>
   </body>
 </html>
